[gd_scene load_steps=2 format=3 uid="uid://dav5md7665tgq"]

[ext_resource type="Script" path="res://armor/armor.gd" id="1_8ak1m"]

[node name="Armor" type="Node2D"]
script = ExtResource("1_8ak1m")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="RechargeTimer" type="Timer" parent="."]
one_shot = true

[node name="EquippedArmor" type="Node2D" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
